Code review: Reverting "make everything final" refactor @ commit "6bed82a2055816faed10f69ff8d72318b1127a6e".